# NebiumOS

./: README.md
docs/: ARCHITECTURE.md  CHECKLIST.md  LEARNING.md  ROADMAP.md
src/compositor/: compositor.c  meson.build
